[metadata]
name = readPPStrack-Raymond-Lutz
version = 1.0a1
author = Raymond Lutz
author_email = lutzray@mac.com
description = postprocessing software for the atomic synchronator hardware dongle
long_description = file: README.md
long_description_content_type = text/markdown
url = https://hackaday.io/project/176196-atomic-synchronator
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

# https://packaging.python.org/tutorials/packaging-projects/